--- a/plamp.html
+++ b/plamp.html
@@ -4,10 +4,10 @@
 <!--
 
 Simple demo page for Plamp, that illustrates REST Api.
+
 Note: the server is CORS enabled, so this page works
-without a server:
-  open directly in browser on the subnet
-  and set the Plamp host before sending commands
+without a server. Simply open the file directly in browser
+and set the Plamp host before sending commands.
 
 This REST API uses JSON arrays with POST methods
 
