--- a/public/index.html
+++ b/public/index.html
@@ -31,6 +31,48 @@
     <br>
     <button id="pushme">Pushme</button>
 
+
+<h1>REST Plamp</h1>
+<i>Plamps are good!</i>
+
+<div>
+<h2>Plamp host (CORS)</h2>
+Plamp is CORS enabled<br>
+<input type="text" size="40" value="" id="host_id" /><br>
+</div>
+
+<div>
+<h2>[POST] /color_wipe</h2>
+An array with a color (0-255) and a wait (ms) [r, g, b, w]<br>
+<input type="text" size="40" value="[8, 8, 8, 20]" id="colorwipe_id" /><br>
+<button onclick="send_color_wipe()" >Send command</button>
+</div>
+
+<div>
+<h2>[POST] /color_array</h2> 
+An array of indexed colors [[i, r, g, b]]<br>
+<textarea rows="10" cols="40"  id="array_values_id" >
+[
+ [ 0, 255,     0,     0],
+ [ 7,     0, 255,     0],
+ [56,    0,     0, 255],
+ [63, 255, 255, 255] 
+]
+</textarea><br>
+<button onclick="send_color_array()">Send command</button>
+</div>
+
+
+<div>
+<h2>Response</h2>
+Last response first
+<div id="responseDiv"/>
+</div>
+
+
+
+    <script type="text/javascript" src="/js/rest_plamp.js"></script>
+
     <script type="text/javascript" src="/js/plamp.js"></script>
     <script type="text/javascript" src="/js/effects.js"></script>
   </body>
