--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,8 @@
     </style>
   </head>
   <body>
+   
+    
     <h1>Socket Plamp</h1>
     <div id="status" class="border">Disconnected</div>
     <form id="color_wipe">
@@ -31,6 +33,9 @@
     <br>
     <button id="pushme">Pushme</button>
 
+    <br>R<input id='r_id' type="range" min=0 max=255 step=1/>
+    <br>G<input id='g_id' type="range" min=0 max=255 step=1/>
+    <br>B<input id='b_id' type="range" min=0 max=255 step=1/>
 
 <h1>REST Plamp</h1>
 <i>Plamps are good!</i>
